# bavardage

./: .gitignore  README  README.md  root.pem
certifs/: bavardage.crl  bavardageserversec.pem  bavardageserversec.req  bavardageserversec_certif.pem  root.pem  secserv_certif.pem  secserv_key.pem  secserv_req.req  serversec_certifs.pem  tata_certif.pem  tata_key.pem  toto.pem  toto.req  toto_certif.pem  toto_key.pem  toto_req.req
src/: CMakeLists.txt  makefile
src/client/: CMakeLists.txt  Client.vala  client-cli.c  client.c  clientsec-cli.c  clientsectest.c  interface.ui  lib_client.c  lib_client.h  libclient.c  libclient.h  libclient.vapi  libclientsec.c  libclientsec.h  libclientsec.vapi  makefile
src/client/Threads/: ReceiveSecThread.vala  ReceiveThread.vala
src/client/Widgets/: AboutDialog.vala  ConnectionDialog.vala  JoinRoomDialog.vala  NewRoomDialog.vala  SendInvitationDialog.vala
src/common/: CMakeLists.txt  SocketTCP.c  SocketTCP.h  common.h  commonsec.c  commonsec.h  makefile  mysqlite.c  mysqlite.h  room_manager.c  room_manager.h  room_manager_sec.c  room_manager_sec.h  test_rooms.c  user_manager.c  user_manager.h
src/common_server/: makefile  mysqlite.c  mysqlite.h
src/server/: CMakeLists.txt  lib_server.h  makefile  server.c  server_database.db  user_manager.c
src/serversec/: #secure_server.c#  .#secure_server.c  CMakeLists.txt  secure_server.c  secure_server.h  structures.h
